# quirc

./: CMakeLists.txt
